# axum-plugins-router

./: Cargo.toml  Plugins.toml  README.md
examples/: app.rs  test.rs
examples/plugin_shortcode/: mod.rs
examples/templates/: plugin_test_shortcodes.html
plugins/arp-gmail/: config.json  plugin.json  readme-first.txt
plugins/arp-gmail/templates/: form.html
plugins/arp-skeleton/: plugin.json
plugins/foo-bar/: plugin.json
src/: lib.rs
