[package]
name = "axum-router-plugin"
version = "0.1.2"
edition = "2021"
description = "Shared library-based plugins for Axum"
keywords = ["axum", "router", "plugins", "web"]
categories = ["web-programming", "asynchronous"]
repository = "https://github.com/mrhdias/axum-router-plugin"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
axum = "0.7.5"
hyper = "1.4.1"
libloading = "0.8.5"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[dev-dependencies]
open = "5.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
tera = { version = "1.20.0", features = ["builtins"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["normalize-path"] }
